fix dropdown z-index

--- a/src/renderer/base/ui/dropdown/dropdown.scss
+++ b/src/renderer/base/ui/dropdown/dropdown.scss
@@ -27,6 +27,7 @@
 		width: 100%;
 		color: #cccccc;
 		background-color: rgb(32, 33, 32);
+		z-index: 9999;
 
 		& .choice {
 			padding: 2px 5px;
